--- a/RayTracing/RayTracing/RayTracing.vcxproj
+++ b/RayTracing/RayTracing/RayTracing.vcxproj
@@ -92,6 +92,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <AdditionalDependencies>GCMath.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -133,6 +134,7 @@
     <ClInclude Include="DistributedRender.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="material.h" />
+    <ClInclude Include="MaterialMath.h" />
     <ClInclude Include="MeshTriangle.h" />
     <ClInclude Include="MetropolisRender.h" />
     <ClInclude Include="Object.h" />
@@ -145,6 +147,7 @@
     <ClInclude Include="RayTracingDifine.h" />
     <ClInclude Include="render.h" />
     <ClInclude Include="Shpere.h" />
+    <ClInclude Include="Texture.h" />
     <ClInclude Include="WhittedRender.h" />
   </ItemGroup>
   <ItemGroup>
@@ -156,6 +159,8 @@
     <ClCompile Include="Plane.cpp" />
     <ClCompile Include="RayCasting.cpp" />
     <ClCompile Include="render.cpp" />
+    <ClCompile Include="Shpere.cpp" />
+    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="WhittedRender.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
