Update Distributed ray tracing

--- a/RayTracing/RayTracing/RayTracing.vcxproj
+++ b/RayTracing/RayTracing/RayTracing.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="WhittedRender.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DistributedRender.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="material.cpp" />
     <ClCompile Include="MetropolisRender.cpp" />
