--- a/RayTracing/RayTracing/RayTracing.vcxproj
+++ b/RayTracing/RayTracing/RayTracing.vcxproj
@@ -148,12 +148,14 @@
     <ClInclude Include="RayTracingDifine.h" />
     <ClInclude Include="RectLighting.h" />
     <ClInclude Include="render.h" />
+    <ClInclude Include="Sample.h" />
     <ClInclude Include="Shpere.h" />
     <ClInclude Include="ShpereLighting.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="WhittedRender.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="DistributedRender.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="Main.cpp" />
